--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 
 updates:
   - package-ecosystem: docker
-    directory: /
+    directory: /traefik/
     schedule:
       interval: daily
       time: '05:00'
