--- a/.github/workflows/cd.docker.yml
+++ b/.github/workflows/cd.docker.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/cd.docker.yml'
-      - 'traefik/*'
+      - 'traefik/**/*'
 
   schedule:
     - cron: 0 7 1 * * # at 07:00 on day-of-month 1, UTC
@@ -32,15 +32,15 @@ jobs:
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with: { fetch-depth: 0 }
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Packages
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -48,14 +48,14 @@ jobs:
 
       - name: Define metadata for images
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: |
             ghcr.io/octomation/stub
           tags: |
             type=raw,value=latest
       - name: Build and push images
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: traefik
           file: traefik/Dockerfile
@@ -72,7 +72,7 @@ jobs:
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with: { fetch-depth: 0 }
 
       - name: Send notification
