--- a/traefik/Dockerfile
+++ b/traefik/Dockerfile
@@ -1,5 +1,5 @@
 FROM traefik:v2.10
 
 COPY static.yml /etc/traefik/traefik.yml
-COPY dynamic.yml /etc/traefik/handle.yml
+COPY dynamic /etc/traefik/config
 RUN mkdir -p /etc/traefik/acme
