dev: fix router names for octolab site family

--- a/traefik/dynamic/octolab.net.yml
+++ b/traefik/dynamic/octolab.net.yml
@@ -1,6 +1,6 @@
 http:
   routers:
-    octolab:
+    octolab.net:
       rule: Host(`octolab.net`, `www.octolab.net`)
       service: github
       tls:
