--- a/traefik/dynamic/jointo.yml
+++ b/traefik/dynamic/jointo.yml
@@ -6,4 +6,23 @@ http:
       tls:
         certResolver: letsencrypt
       middlewares:
+        - kamilsk-on-github
+        - kamilsk-on-linkedin
+        - kamilsk-on-twitter
         - redirect-parked
+
+  middlewares:
+    kamilsk-on-github:
+      redirectRegex:
+        regex: jointo\.space/kamilsk/github$
+        replacement: https://github.com/kamilsk
+
+    kamilsk-on-linkedin:
+      redirectRegex:
+        regex: jointo\.space/kamilsk/linkedin$
+        replacement: https://www.linkedin.com/in/kamilsk/
+
+    kamilsk-on-twitter:
+      redirectRegex:
+        regex: jointo\.space/kamilsk/twitter$
+        replacement: https://twitter.com/ikamilsk
