--- a/traefik/dynamic/jointo.yml
+++ b/traefik/dynamic/jointo.yml
@@ -7,6 +7,7 @@ http:
         certResolver: letsencrypt
       middlewares:
         - kamilsk-on-cal.com
+        - kamilsk-on-getmentor
         - kamilsk-on-github
         - kamilsk-on-linkedin
         - kamilsk-on-telegram
@@ -18,6 +19,11 @@ http:
       redirectRegex:
         regex: ^.*jointo\.space/kamilsk/cal\.com(.*)$
         replacement: https://cal.com/kamilsk${1}
+
+    kamilsk-on-getmentor:
+      redirectRegex:
+        regex: ^.*jointo\.space/kamilsk/getmentor$
+        replacement: https://getmentor.dev/mentor/kamil-samigullin-612
 
     kamilsk-on-github:
       redirectRegex:
