chore: global reorg and add new hosts

--- a/traefik/dynamic/_parked.yml
+++ b/traefik/dynamic/_parked.yml
@@ -3,4 +3,4 @@ http:
     redirect-parked:
       redirectRegex:
         regex: .*
-        replacement: https://kamil.samigullin.info/
+        replacement: https://github.com/kamilsk
