--- a/traefik/dynamic/samigullin.yml
+++ b/traefik/dynamic/samigullin.yml
@@ -1,15 +1,13 @@
 http:
   routers:
     samigullin:
-      rule: Host(`samigullin.info`, `www.samigullin.info`)
+      rule: Host(
+          `kamil.samigullin.info`,
+          `samigullin.info`,
+          `www.samigullin.info`,
+        )
       service: github
       tls:
         certResolver: letsencrypt
       middlewares:
-        - redirect-samigullin
-
-  middlewares:
-    redirect-samigullin:
-      redirectRegex:
-        regex: ^https?://.*/(.*)
-        replacement: https://kamil.samigullin.info/${1}
+        - redirect-parked
