--- a/traefik/dynamic.yml
+++ b/traefik/dynamic.yml
@@ -88,6 +88,14 @@ http:
       middlewares:
         - redirect-parked
 
+    makefiles:
+      rule: Host(`makefiles.octolab.org`)
+      service: github
+      tls:
+        certResolver: letsencrypt
+      middlewares:
+        - redirect-makefiles
+
     octolab:
       rule: Host(`octolab.net`, `www.octolab.net`)
       service: github
@@ -136,6 +144,14 @@ http:
       middlewares:
         - redirect-tact-cloud
 
+    taskfiles:
+      rule: Host(`taskfiles.octolab.org`)
+      service: github
+      tls:
+        certResolver: letsencrypt
+      middlewares:
+        - redirect-taskfiles
+
 
   middlewares:
     auth:
@@ -172,6 +188,11 @@ http:
         regex: ^https?://.*/(.*)
         replacement: https://kupitevmeste.ru/${1}
 
+    redirect-makefiles:
+      redirectRegex:
+        regex: .*
+        replacement: https://github.com/octomation/makefiles
+
     redirect-parked:
       redirectRegex:
         regex: .*
@@ -196,6 +217,11 @@ http:
       redirectRegex:
         regex: .*
         replacement: https://kamilsk.cloud.okteto.net/
+
+    redirect-taskfiles:
+      redirectRegex:
+        regex: .*
+        replacement: https://github.com/octomation/taskfiles
 
 
   services:
